feat: implementa serviço de email com bibliotecas Common.Utilities e Common.Messages
Adiciona Serviço de Email com integração RabbitMQ e bibliotecas Common

- Serviço de verificação de email com endpoints de envio/reenvio
- Common.Utilities: Geração de códigos, utilitários de string/data
- Common.Messages: Infraestrutura de mensageria orientada a eventos
- Integração RabbitMQ para comunicação entre serviços
- Geração e validação segura de códigos de verificação
- Arquitetura DDD com implementação customizada de CQRS

--- a/services/auth/src/Auth.API/appsettings.json
+++ b/services/auth/src/Auth.API/appsettings.json
@@ -13,5 +13,11 @@
     "Key": "super-secret-key-123456789-abcdefghijklmnopqrstuvwxyz-32-chars-minimum",
     "Issuer": "auth-service",
     "Audience": "auth-service"
+  },
+  "RabbitMQ": {
+    "Host": "192.168.10.180",
+    "Port": 5672,
+    "Username": "guest",
+    "Password": "guest"
   }
 }
