--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,16 +3,36 @@ version: '3.8'
 services:
   postgres:
     image: postgres:15
-    container_name: auth_postgres
+    container_name: ddd_postgres
     environment:
-      POSTGRES_DB: auth_db
+      POSTGRES_DB: postgres
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     ports:
       - "5433:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    restart: unless-stopped
+    networks:
+      - ddd_network
+
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: ddd_rabbitmq
+    environment:
+      RABBITMQ_DEFAULT_USER: guest
+      RABBITMQ_DEFAULT_PASS: guest
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    volumes:
+      - rabbitmq_data:/var/lib/rabbitmq
+    networks:
+      - ddd_network
 
 volumes:
   postgres_data:
+  rabbitmq_data:
+
+networks:
+  ddd_network:
+    driver: bridge
